assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nova+Round&display=swap');

/* Asterisk for general selector */
* {
    font-family: 'Nova Round', system-ui;
}

body {
    max-height: 110vh;
}

.hidden {
    display: none;
}

/* Home page styles */
#home {
    color: #ffffff;
    text-align: center;
    height: 110vh;
    width: 100%;
    padding: 0;
    margin: 0;
    background: url(../images/ball-img-dark.jpg) no-repeat center center/cover;
 
}


/* Hides link decoration on h1 */
h1,
a {
    text-decoration: none;
    color: #ffffff;
}

/* Style h1 for home */
#home h1 {
    text-align: center;
    font-size: 1.7rem;
    padding-top: 80px;

}

/* Container class */
.container {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
    margin-left: 10px;
    margin-right: 10px;
}

/* Card for quiz to be shown on */
.soccer {
    width: 500px;
    height: 400px;
    background: #81818149;
    border-radius: 30px;
    padding: 50px 20px;
    margin-bottom: 30px;
}


.sports-image {
    /* Got from google search/Credited in ReadMe */
    background: url(../images/ball-hero.jpeg) no-repeat center center/cover;
    height: 300px;
    width: 100%;
    margin-bottom: 20px;
    border-radius: 40px;
    text-indent: -9999px;
}

/* Style Buttons */
.btn {
    font-size: 1rem;
    padding: 8px;
    height: 15px;
    margin: 5px;
    text-align: center;
    margin-bottom: 30px;
    text-decoration: none;
    border-radius: 4px;
    font-weight: bolder;
    border: 2px solid #1e1e1e;
}

/* Button (a) styling */
.homebtn {
    color: #1e1e1e;
    background: #ffffff;
}

.sports {
    color: #1e1e1e;
    background: #66fcf1;
}

/* Activates when button is hovered with cursor */
.btn:hover {
    cursor: pointer;
    box-shadow: 0 0.4rem 1.4rem 0;
    transition: 150ms;
    transform: scale(1.4);
}

/* Soccer rules page */
.rules {
    margin: 0;
    list-style-type: none;
    margin-bottom: 50px;
    padding: 0;
    line-height: 2.5rem;
    font-size: .7rem;
    line-height: 20px;
}

.rules li {
    margin-bottom: 20px;
}

.rules-container h1 {
    font-size: 1.4rem;
}

.rules-container h2 {
    font-size: 1.2rem;
    color: #66fcf1
}

/* General styles for rules page */
#soccer {
    font-family: 'Nova Round', system-ui;
    color: #ffffff;
    text-align: center;
    height: 100vh;
    width: 100%;
    padding: 0;
    margin: 0;
    background: url(../images/ball-img-dark.jpg) no-repeat center center/cover;
}

.rules-container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 60vw;
    height: fit-content;
    background: #262626;
    border-radius: 30px;
    padding: 50px 20px;
    margin-bottom: 30px;
}

/* Soccer quiz page */
.soccer-quiz {
    background: url(../images/ball-img-dark.jpg) no-repeat center center/cover;
    color: #101820;
    font-size: 1.5rem;
    height: 100vh;
}

#quiz {
    width: 80%;
}

.soccer-quiz h1,
#question-container h2 {
    color: #ffffff;
    font-size: 1.3rem;
}

.choice-container {
    display: flex;
    font-size: 1rem;
    margin-bottom: 1rem;
    width: 100%;
    border-radius: 4px;
    background: #66fcf1;
    min-width: 60%;
    max-width: 80%;
    height: 2rem;
}

/* HUD items (timer, score) */
#hud {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    font-size: 1rem;
    color: #fff;
}

#question {
    color: #fff;
}

/* Adds style when hovering over answers */
.choice-container:hover {
    cursor: pointer;
    box-shadow: 0 .4rem 1rem 0 #66fcf1;
    transform: scale(1.02);
}

/* Choices styles */
.choice-text {
    width: 100%;
    height: 100%;
    align-items: center;
    margin-top: 0;
    padding-left: 30px;
}

.choice-text {
    display: flex;
}

/* Progress Bar */
#progressBar {
    width: 90%;
    height: 10px;
    border: 0.2rem solid #66fcf1;
    border-radius: 20px;
    overflow: hidden;
}

#progressBarFull {
    height: 100%;
    background: #66fcf1;
    width: 0%;
}

/* Color when you get the question correct/incorrect */
.correct {
    background: green;
}

.incorrect {
    background: red;
}

/* End page */
#end {
    text-align: center;
    background: url(../images/ball-img-dark.jpg) no-repeat center center/cover;
    height: 100vh;
    width: 100vw;
}

#score-text {
    margin-top: 200px;
    color: #ffffff;
}

#final-score {
    font-size: 1.5rem;
    color: #66fcf1;
}

/* Query Selectors */
@media screen and (min-width: 768px) {

    /* Conatiner styes */
    .container {
        height: fit-content;
        font-size: larger;
    }

    /* Heading for rules */
    .rules-container h1 {
        font-size: 2.5rem;
    }

    .rules-container h2 {
        font-size: 2rem;
    }

    .rules {
        font-size: 1.6rem;
        line-height: 30px;
    }

    /* Choices in quiz */
    .choice-text {
        font-size: 1.3rem;
    }

    /* Container holding choices */
    .choice-container {
        height: 4rem;
        width: 700px;
    }

    /* Quiz question and number of questions heading */
    .soccer-quiz h1,
    #question-container h2 {
        color: #ffffff;
        font-size: 1.7rem;
    }

    /* HUD items (timer, score) */
    #hud {
        font-size: 1.6rem;
    }

    /* Width of quiz section so it remains the same with for each question */
    #quiz {
        width: 90%;
    }

    /* Button sizing */
    .btn {
        font-size: 1.4rem;
    }

    #final-score {
        font-size: 2.4rem;
    }
}


/* Laptops and larger */
@media screen and (min-width: 992px) {
    #home h1 {
        font-size: 2rem;
    }

    .btn {
        font-size: 1.2rem;
    }

    /* Choices in quiz */
    .choice-text {
        font-size: 1.3rem;
    }

    /* Container holding choices */
    .choice-container {
        height: 3.5rem;
    }

    /* Quiz question and number of questions heading */
    .soccer-quiz h1,
    #question-container h2 {
        color: #ffffff;
        font-size: 2rem;
    }

    /* HUD items (timer, score) */
    #hud {
        font-size: 1.8rem;
    }

    /* Width of quiz section so it remains the same with for each question */
    #quiz {
        width: 90%;
    }

    #final-score, #score-text {
        font-size: 4rem;
    }
}

@media screen and (min-width: 1440px) {
    .rules-container h1 {
        font-size: 2.5rem;
    }
}

@media screen and (min-width: 2000px) {
    * {
        font-size: larger;
    }

    .soccer {
        height: 50vh;
        width: 35vw;
    }

    .sports-image {
        height: 50%;
    }

    .container {
        border-radius: 8px;
    }

    #home h1 {
        font-size: 4.5rem;
    }

    .sports-quiz {
        font-size: 3.5rem;
    }

    .sports-image {
        margin-bottom: 60px;
    }

    .btn {
        font-size: 2.6rem;
    }
}

